# telegraf-plugin-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  telegraf-plugin-go-glue
example/: Cargo.toml  makefile-template.toml  telegraf-plugin-go-glue
example/src/: lib.rs
src/: lib.rs
