[package]
name = "telegraf-plugin"
version = "0.1.0"
authors = ["Timidger <pcarpenter@starry.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[lib]
proc-macro = true

[build-dependencies]
bindgen = "0.49.*"

[dependencies]
chrono = "0.4"
libc = "0.2"
syn = { version = "0.15", features = ["full", "fold"] }
quote = "0.6"
proc-macro2 = "0.4"
